# ya-metrics-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  README_ru.md  main.py  pyproject.toml
docs/plans/: 2026-02-23-ya-metrics-mcp-design.md  2026-02-23-ya-metrics-mcp-implementation.md
src/ya_metrics_mcp/: __init__.py  exceptions.py
src/ya_metrics_mcp/metrika/: client.py  config.py
src/ya_metrics_mcp/metrika/fetchers/: advanced.py  base.py  content.py  demographics.py  fetcher.py  geographic.py  performance.py  traffic.py
src/ya_metrics_mcp/servers/: context.py  dependencies.py  main.py  tools.py
src/ya_metrics_mcp/utils/: date.py  decorators.py  lifecycle.py  logging.py  tools.py
tests/unit/: test_client.py  test_config.py  test_exceptions.py  test_server.py  test_utils.py
tests/unit/test_fetchers/: test_advanced.py  test_base.py  test_content.py  test_demographics.py  test_fetcher.py  test_geographic.py  test_performance.py  test_traffic.py
