[project]
name = "ya-metrics-mcp"
version = "0.1.0"
description = "MCP server for Yandex Metrika analytics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ruben Khachaturov" }
]
keywords = ["mcp", "yandex", "metrika", "analytics"]
dependencies = [
    "fastmcp>=2.13.0,<2.15.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.0",
    "uvicorn>=0.27.1",
    "starlette>=0.40.0",
]

[project.urls]
Repository = "https://github.com/mrkhachaturov/ya-metrics-mcp"

[project.scripts]
ya-metrics-mcp = "ya_metrics_mcp:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ya_metrics_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
